--- a/src/dark-theme.scss
+++ b/src/dark-theme.scss
@@ -243,9 +243,6 @@ $headerDarkBlue: #0f182d;
     .channel-menu-button span {
       background-color: $darkMediumGray;
     }
-    &.mute .channel-menu-button span {
-      background-color: $darkDarkGray;
-    }
     .channel-menu {
       background-color: $darkBackground;
       box-shadow: 0px 0px 6px $darkGreen;
